# LLMFS

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.MD  Cargo.toml  DESIGN-NEW.MD  DESIGN-OLD.MD  README.md
benches/: address_translation.rs  block_read.rs  block_write.rs  file_roundtrip.rs  quality.rs
benches/common/: mod.rs
benches/fixtures/: .gitignore
benches/perplexity-results/: README.md  qwen2.5-0.5b-instruct-f16.csv  qwen2.5-0.5b-instruct-q8_0.csv  smollm2-135m-f16.csv  smollm2-135m-q8_0.csv
benches/results/: v2-ppl-smollm2-135m-q8_0.csv
docs/: compensation-design.md  concurrency-design.md  gpu-dev-env.md  phase-d-measurement.md
examples/: inspect_gguf.rs  make_synth_gguf.rs  mount_timing.rs  real_model_smoke.rs
models/pristine/: MANIFEST.sha256  README.md
scripts/: analyze-hessian.py  gpu-env.sh  llmdb-e2e-root.sh  perplexity-check.sh  perplexity-sweep.sh  regen-kquant-fixture.sh  v2-perplexity-check.sh
src/: calibrate.rs  diagnostics.rs  lib.rs  main.rs
src/ask/: bridge.rs  mod.rs  server.rs
src/compress/: bpe.rs
src/data/: calibration-corpus.txt
src/forward/: awq.rs  block.rs  compensation.rs  compensation_context.rs  config.rs  mod.rs  (+11 more)
tasks/: 00-testing-strategy.md  01-bootstrap-crate-and-fixtures.md  01-repo-reset-and-dependency-baseline.md  02-gguf-parser-and-quant-model.md  02-gguf-parser-extensions.md  03-packing-modules.md  03-tensor-selection-and-capacity-planner.md  04-packers-q8-and-float.md  04-tensor-eligibility-and-map.md  05-packers-k-quant.md  05-superblock-and-integrity.md  06-redirection-table.md  06-tensor-map-and-address-translation.md  07-metadata-layout-and-integrity.md  07-stego-device-block-io.md  08-shadow-copy-and-recovery.md  08-stego-device-core.md  09-atomic-writes-and-recovery.md  09-file-table-and-file-ops.md  10-cli-file-commands.md  10-sqlite-vfs.md  11-cli-core-commands.md  11-nbd-protocol.md  12-bpe-compression-layer.md  12-nbd-server.md  13-ask-bridge.md  13-diagnostics-lobotomy-and-defrag.md  14-ask-session-and-nlq.md  14-diagnostics-and-status.md  15-benchmarks-and-quality-harness.md  15-benchmarks.md  16-raw-mode-storage-engine.md  16-v1-cleanup-and-docs.md  README.md
tests/: ask_e2e.rs  ask_tool_dispatch.rs  bootstrap_smoke.rs  calibrate_e2e.rs  calibration_byte_io.rs  calibration_ceiling.rs  calibration_coverage.rs  calibration_layer0_findability.rs  calibration_magnitude.rs  calibration_placement_roundtrip.rs  calibration_pristine_smoke.rs  calibration_properties.rs  calibration_snapshot.rs  cli_smoke.rs  compensation_real_h.rs  diagnostics.rs  docs_parity.rs  file_ops.rs  file_table.rs  fixture_strategy.rs  forward_awq_real_gguf.rs  forward_compensation_context.rs  forward_dequant_real_gguf.rs  forward_perplexity_parity.rs  forward_q8_0_e2e.rs  forward_tokenizer_config.rs  forward_tokenizer_encode_parity.rs  fuse_smoke.rs  gguf_parser.rs  hessian_measure.rs  k_quant_packing.rs  kquant_ggml_reference.rs  mount_e2e.rs  nbd_alignment.rs  nbd_protocol.rs  nbd_smoke.rs  packer_trait.rs  quant_packing.rs  real_gguf_e2e.rs  redirection_table.rs  (+31 more)
(+61 files in other folders)
