[package]
name = "llmdb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crc32fast = "1.4.2"
ctrlc = "3.4"
fuser = { version = "0.15", default-features = false }
libc = "0.2"
memmap2 = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
ureq = { version = "2.12.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3.16.0"

[[bench]]
name = "block_read"
harness = false

[[bench]]
name = "block_write"
harness = false

[[bench]]
name = "address_translation"
harness = false

[[bench]]
name = "file_roundtrip"
harness = false

[[bench]]
name = "quality"
harness = false
