[package]
name = "llmdb"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.5"
clap = { version = "4.5.38", features = ["derive"] }
crc32fast = "1.4.2"
ctrlc = "3.4"
# Unicode-aware regex with lookaround, used by the forward-pass
# tokenizer's pre-tokenizer (gpt2-family splits use `(?!\S)` which
# std-crate `regex` doesn't support). Small focused dep — chosen
# over hand-rolling a unicode regex engine, which llama.cpp does
# in ~1000 lines of C++ and which isn't scope for this project.
fancy-regex = { version = "0.16", default-features = false, features = ["std"] }
fuser = { version = "0.15", default-features = false }
libc = "0.2"
memmap2 = "0.9.5"
# Data-parallel over output columns in `forward::ops::matmul`. The
# forward pass is the dominant cost in calibration runs; a naive
# triple loop on SmolLM2-135M takes ~2 min per call single-
# threaded. par_iter across output rows is the cheapest meaningful
# win and doesn't need unsafe / explicit SIMD.
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
ureq = { version = "2.12.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
proptest = { version = "1.5", default-features = false, features = ["std"] }
tempfile = "3.16.0"

[[bench]]
name = "address_translation"
harness = false
